--- a/assets/css/bootstrap-slider.css
+++ b/assets/css/bootstrap-slider.css
@@ -1,9 +1,7 @@
 /*!
  * Slider for Bootstrap
  *
- * Copyright 2012 Stefan Petre
  * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
  *
  */
 .slider {
@@ -82,6 +80,9 @@
 .slider input {
   display: none;
 }
+.slider .tooltip.hide {
+  display: none;
+}
 .slider .tooltip-inner {
   white-space: nowrap;
 }
@@ -129,4 +130,13 @@
 }
 .slider-handle.triangle {
   background: transparent none;
+}
+.slider-handle.custom {
+  background: transparent none;
+}
+.slider-handle.custom::before {
+  line-height: 20px;
+  font-size: 20px;
+  content: '\2605';
+  color: #726204;
 }
